syntax = "proto3";

package DataFrame;

option go_package = "./proto;dataframe";


// This is the frame that registers a client 
message CLIENT_AUTH_REQUEST_FRAME {
    string uniqueClientId = 1; // unique identifier for the client from the client
    string secret = 2; // secret for authentication works like auth
    int32 streamId = 4; // stream identifier
    bool IsNewClient = 3; // true if new client, false if existing client
}

// This is the frame that the server sends to the client after successful authentication
message CLIENT_AUTH_RESPONSE_FRAME {
    string sfClientId = 1; // id assigned by server...it is like a domain id  clientID@domain
    string token = 2; // token for authentication  
    int32 streamId = 4; // stream identifier
}
